--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section class="profile"> 
 
-      <h1>I am Alexandra. gland to see you!</h1>
+      <h1>I am Alexandra. glad to see you!</h1>
     <main>
       <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>  
     </main> 
